--- a/Bitad2021/Bitad2021/Views/LecturesPage.xaml
+++ b/Bitad2021/Bitad2021/Views/LecturesPage.xaml
@@ -1,72 +1,74 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 
-<xamForms:ReactiveContentPage x:TypeArguments="viewModels:LecturesViewModel" xmlns="http://xamarin.com/schemas/2014/forms"
+<xamForms:ReactiveContentPage x:TypeArguments="viewModels:LecturesViewModel"
+                              xmlns="http://xamarin.com/schemas/2014/forms"
                               xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
                               xmlns:xamForms="clr-namespace:ReactiveUI.XamForms;assembly=ReactiveUI.XamForms"
-                              xmlns:viewModels="clr-namespace:Bitad2021.ViewModels;assembly=Bitad2021" xmlns:Models="clr-namespace:Bitad2021.Models"
+                              xmlns:viewModels="clr-namespace:Bitad2021.ViewModels;assembly=Bitad2021"
+                              xmlns:Models="clr-namespace:Bitad2021.Models"
                               x:Class="Bitad2021.Views.LecturesPage">
     <ContentPage.Content>
         <StackLayout>
-            <ListView ItemsSource="{Binding Lectures}" x:Name="ListView" 
-                      SelectedItem="{Binding SelectedItem,Mode=TwoWay}"                   
+            <ListView ItemsSource="{Binding Lectures}" x:Name="ListView"
+                      SelectedItem="{Binding SelectedItem,Mode=TwoWay}"
                       HasUnevenRows="True"
                       SeparatorVisibility="None"
                       CachingStrategy="RecycleElement"
                       ItemSelected="ListView_OnItemSelected"
                       SelectionMode="{Binding SelectionMode,Mode=TwoWay}"
-                      Margin="0 ,10,0,10">  
-                <ListView.ItemTemplate>  
-                    <DataTemplate x:DataType="Models:Agenda">  
+                      Margin="0 ,10,0,10">
+                <ListView.ItemTemplate>
+                    <DataTemplate x:DataType="Models:Agenda">
                         <ViewCell>
                             <StackLayout Padding="0,0,0,10">
                                 <Frame HasShadow="True"
                                        BackgroundColor="White"
-                                       Margin="20 ,10, 20, 0" 
+                                       Margin="20 ,10, 20, 0"
                                        Padding="20,20,20,20">
-                                <Grid>
-                                    <Grid.RowDefinitions>
-                                        <RowDefinition Height="*" />
-                                        <RowDefinition Height="55" />
-                                    </Grid.RowDefinitions>
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="2*"/>
-                                        <ColumnDefinition Width="2*"/>
-                                        <ColumnDefinition Width="80"/>
-                                    </Grid.ColumnDefinitions>
-                                    <Label Grid.Row="0" Grid.Column="0" 
-                                           Text="{Binding Room}" />
-                                    <Label Grid.Row="0" Grid.Column="1">
-                                        <Label.Text>
-                                            <MultiBinding StringFormat="{}{0:HH:mm} - {1:HH:mm}">
-                                                <Binding Path="Start"/>
-                                                <Binding Path="End"/>
-                                            </MultiBinding>
-                                        </Label.Text>
-                                    </Label>
-                                    <Label Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2"
-                                           Text="{Binding Title}" 
-                                           FontAttributes="Bold"
-                                           TextColor="#333"
-                                           VerticalOptions="Center"
-                                           Margin="0,0,0,-10"/>  
+                                    <Grid>
+                                        <Grid.RowDefinitions>
+                                            <RowDefinition Height="*" />
+                                            <RowDefinition Height="55" />
+                                        </Grid.RowDefinitions>
+                                        <Grid.ColumnDefinitions>
+                                            <ColumnDefinition Width="2*" />
+                                            <ColumnDefinition Width="2*" />
+                                            <ColumnDefinition Width="80" />
+                                        </Grid.ColumnDefinitions>
+                                        <Label Grid.Row="0" Grid.Column="0"
+                                               Text="{Binding Room}" />
+                                        <Label Grid.Row="0" Grid.Column="1">
+                                            <Label.Text>
+                                                <MultiBinding StringFormat="{}{0:HH:mm} - {1:HH:mm}">
+                                                    <Binding Path="Start" />
+                                                    <Binding Path="End" />
+                                                </MultiBinding>
+                                            </Label.Text>
+                                        </Label>
+                                        <Label Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2"
+                                               Text="{Binding Title}"
+                                               FontAttributes="Bold"
+                                               TextColor="#333"
+                                               VerticalOptions="Center"
+                                               Margin="0,0,0,-10" />
 
-                                    <Frame Grid.Row="0" Grid.Column="2" Grid.RowSpan="2" 
-                                           Padding="0" 
-                                           CornerRadius="100"
-                                           HasShadow="False">
-                                        <Image Source="{Binding Speaker.Picture}"
-                                               HorizontalOptions="FillAndExpand"
-                                               VerticalOptions="FillAndExpand"
-                                               Aspect="AspectFill"/>
-                                    </Frame> 
-                                </Grid>
-                            </Frame>
+                                        <Frame Grid.Row="0" Grid.Column="2" Grid.RowSpan="2"
+                                               Padding="0"
+                                               CornerRadius="100"
+                                               HasShadow="False">
+                                            <Image Source="{Binding Speaker.Picture}"
+                                                   HorizontalOptions="FillAndExpand"
+                                                   VerticalOptions="FillAndExpand"
+                                                   Aspect="AspectFill" />
+                                        </Frame>
+                                    </Grid>
+                                </Frame>
                             </StackLayout>
-                            
-                        </ViewCell>  
-                    </DataTemplate>  
-                </ListView.ItemTemplate>  
-            </ListView>  
+
+                        </ViewCell>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
         </StackLayout>
     </ContentPage.Content>
 </xamForms:ReactiveContentPage>
