--- a/Bitad2021/Bitad2021/Views/QrScannerPage.xaml
+++ b/Bitad2021/Bitad2021/Views/QrScannerPage.xaml
@@ -1,40 +1,40 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 
-<xamForms:ReactiveContentPage x:TypeArguments="viewModels:QrScannerViewModel" xmlns="http://xamarin.com/schemas/2014/forms"
+<xamForms:ReactiveContentPage x:TypeArguments="viewModels:QrScannerViewModel"
+                              xmlns="http://xamarin.com/schemas/2014/forms"
                               xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
                               xmlns:xamForms="clr-namespace:ReactiveUI.XamForms;assembly=ReactiveUI.XamForms"
                               xmlns:viewModels="clr-namespace:Bitad2021.ViewModels;assembly=Bitad2021"
                               xmlns:zxing="clr-namespace:ZXing.Net.Mobile.Forms;assembly=ZXing.Net.Mobile.Forms"
                               xmlns:forms="clr-namespace:Lottie.Forms;assembly=Lottie.Forms"
                               x:Class="Bitad2021.Views.QrScannerPage">
-    
-    
+
+
     <ContentPage.Content>
-            <Grid>
-                
-                <zxing:ZXingScannerView IsScanning="{Binding IsScanning}" 
-                                        ScanResultCommand="{Binding ScanResultCommand}" 
-                                        Result="{Binding Path=Result,Mode=TwoWay}"
-                                        IsAnalyzing="{Binding IsAnalyzing}"/>
-                
-                <Grid IsVisible="{Binding IsAnimationVisible}">
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="2*"/>
-                        <RowDefinition Height="5*"/>
-                    </Grid.RowDefinitions>
-                    <forms:AnimationView
-                        x:Name="AnimationView"
-                        Scale="0.5"
-                        AnimationSource="AssetOrBundle"
-                        AutoPlay="False"
-                        RepeatCount="0"
-                        VerticalOptions="FillAndExpand"
-                        HorizontalOptions="FillAndExpand"
-                        OnFinishedAnimation="AnimationView_OnOnFinishedAnimation"
-                    />
-                </Grid>
-                <Grid VerticalOptions="End" x:Name="SnackBarAnchor"/>
+        <Grid>
+
+            <zxing:ZXingScannerView IsScanning="{Binding IsScanning}"
+                                    ScanResultCommand="{Binding ScanResultCommand}"
+                                    Result="{Binding Path=Result,Mode=TwoWay}"
+                                    IsAnalyzing="{Binding IsAnalyzing}" />
+
+            <Grid IsVisible="{Binding IsAnimationVisible}">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="2*" />
+                    <RowDefinition Height="5*" />
+                </Grid.RowDefinitions>
+                <forms:AnimationView
+                    x:Name="AnimationView"
+                    Scale="0.5"
+                    AnimationSource="AssetOrBundle"
+                    AutoPlay="False"
+                    RepeatCount="0"
+                    VerticalOptions="FillAndExpand"
+                    HorizontalOptions="FillAndExpand"
+                    OnFinishedAnimation="AnimationView_OnOnFinishedAnimation" />
             </Grid>
+            <Grid VerticalOptions="End" x:Name="SnackBarAnchor" />
+        </Grid>
     </ContentPage.Content>
-    
+
 </xamForms:ReactiveContentPage>
