--- a/Bitad2021/Bitad2021/Views/AgendasPage.xaml
+++ b/Bitad2021/Bitad2021/Views/AgendasPage.xaml
@@ -1,17 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 
-<xamForms:ReactiveTabbedPage x:TypeArguments="viewModels:AgendasViewModel" xmlns="http://xamarin.com/schemas/2014/forms"
-                              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-                              xmlns:xamForms="clr-namespace:ReactiveUI.XamForms;assembly=ReactiveUI.XamForms"
-                              xmlns:viewModels="clr-namespace:Bitad2021.ViewModels;assembly=Bitad2021"
-                              xmlns:views="clr-namespace:Bitad2021.Views;assembly=Bitad2021"
-                              xmlns:androidSpecific="clr-namespace:Xamarin.Forms.PlatformConfiguration.AndroidSpecific;assembly=Xamarin.Forms.Core"
-                              x:Class="Bitad2021.Views.AgendasPage"
-                              androidSpecific:TabbedPage.ToolbarPlacement="Bottom">
-    
+<xamForms:ReactiveTabbedPage x:TypeArguments="viewModels:AgendasViewModel"
+                             xmlns="http://xamarin.com/schemas/2014/forms"
+                             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+                             xmlns:xamForms="clr-namespace:ReactiveUI.XamForms;assembly=ReactiveUI.XamForms"
+                             xmlns:viewModels="clr-namespace:Bitad2021.ViewModels;assembly=Bitad2021"
+                             xmlns:views="clr-namespace:Bitad2021.Views;assembly=Bitad2021"
+                             xmlns:androidSpecific="clr-namespace:Xamarin.Forms.PlatformConfiguration.AndroidSpecific;assembly=Xamarin.Forms.Core"
+                             x:Class="Bitad2021.Views.AgendasPage"
+                             androidSpecific:TabbedPage.ToolbarPlacement="Bottom">
+
     <views:LecturesPage Title="Wykłady" BindingContext="{Binding LecturesViewModel}"
-                        IconImageSource="agenda_icon.png"/>
+                        IconImageSource="agenda_icon.png" />
     <views:WorkshopsPage Title="Warsztaty" BindingContext="{Binding WorkshopsViewModel}"
-                         IconImageSource="agenda_icon.png"/>
-    
+                         IconImageSource="agenda_icon.png" />
+
 </xamForms:ReactiveTabbedPage>
