--- a/Bitad2021/Bitad2021/Views/WorkshopsPage.xaml
+++ b/Bitad2021/Bitad2021/Views/WorkshopsPage.xaml
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 
-<xamForms:ReactiveContentPage x:TypeArguments="viewModels:WorkshopsViewModel" xmlns="http://xamarin.com/schemas/2014/forms"
+<xamForms:ReactiveContentPage x:TypeArguments="viewModels:WorkshopsViewModel"
+                              xmlns="http://xamarin.com/schemas/2014/forms"
                               xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
                               xmlns:xamForms="clr-namespace:ReactiveUI.XamForms;assembly=ReactiveUI.XamForms"
                               xmlns:viewModels="clr-namespace:Bitad2021.ViewModels;assembly=Bitad2021"
@@ -8,80 +9,79 @@
                               x:Class="Bitad2021.Views.WorkshopsPage">
     <ContentPage.Content>
         <StackLayout>
-            <ListView ItemsSource="{Binding Workshops}" x:Name="ListView" 
-                      SelectedItem="{Binding SelectedItem,Mode=TwoWay}"                   
+            <ListView ItemsSource="{Binding Workshops}" x:Name="ListView"
+                      SelectedItem="{Binding SelectedItem,Mode=TwoWay}"
                       HasUnevenRows="True"
                       SeparatorVisibility="None"
                       CachingStrategy="RecycleElement"
                       SelectionMode="{Binding SelectionMode,Mode=TwoWay}"
                       Margin="0 ,10,0,10">
-                <ListView.ItemTemplate>  
-                    <DataTemplate x:DataType="models:Workshop">  
+                <ListView.ItemTemplate>
+                    <DataTemplate x:DataType="models:Workshop">
                         <ViewCell>
                             <StackLayout Padding="0,0,0,10">
-                                <Frame HasShadow="False"
-                                   BackgroundColor="White"
-                                   Margin="20 ,10, 20, 0" 
-                                   Padding="20,20,20,20">
-                                <Grid>
-                                    <Grid.RowDefinitions>
-                                        <RowDefinition Height="*" />
-                                        <RowDefinition Height="55" />
-                                    </Grid.RowDefinitions>
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="2*"/>
-                                        <ColumnDefinition Width="2*"/>
-                                        <ColumnDefinition Width="80"/>
-                                    </Grid.ColumnDefinitions>
-                                    <Label Grid.Row="0" Grid.Column="0" 
-                                           Text="{Binding Room}" />
-                                    <Label Grid.Row="0" Grid.Column="1">
-                                        <Label.Text>
-                                            <MultiBinding StringFormat="{}{0:HH:mm} - {1:HH:mm}">
-                                                <Binding Path="Start"/>
-                                                <Binding Path="End"/>
-                                            </MultiBinding>
-                                        </Label.Text>
-                                    </Label>
-                                    
-                                    
-                                    
-                                    <StackLayout Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2"
-                                                 VerticalOptions="Center">
-                                        <Label 
-                                            Text="{Binding Title}" 
-                                            FontAttributes="Bold"
-                                            TextColor="#333"/>  
-                                        <!-- TODO: Make this red if full -->
-                                        <Label FontSize="Micro"
-                                               FontAttributes="Italic"
-                                               TextColor="#333">
+                                <Frame HasShadow="True"
+                                       BackgroundColor="White"
+                                       Margin="20 ,10, 20, 0"
+                                       Padding="20,20,20,20">
+                                    <Grid>
+                                        <Grid.RowDefinitions>
+                                            <RowDefinition Height="*" />
+                                            <RowDefinition Height="55" />
+                                        </Grid.RowDefinitions>
+                                        <Grid.ColumnDefinitions>
+                                            <ColumnDefinition Width="2*" />
+                                            <ColumnDefinition Width="2*" />
+                                            <ColumnDefinition Width="80" />
+                                        </Grid.ColumnDefinitions>
+                                        <Label Grid.Row="0" Grid.Column="0"
+                                               Text="{Binding Room}" />
+                                        <Label Grid.Row="0" Grid.Column="1">
                                             <Label.Text>
-                                                <MultiBinding StringFormat="{}{0}/{1}">
-                                                    <Binding Path="ParticipantsNumber"/>
-                                                    <Binding Path="MaxParticipants"/>
+                                                <MultiBinding StringFormat="{}{0:HH:mm} - {1:HH:mm}">
+                                                    <Binding Path="Start" />
+                                                    <Binding Path="End" />
                                                 </MultiBinding>
                                             </Label.Text>
                                         </Label>
-                                    </StackLayout>
 
-                                    
-                                    <Frame Grid.Row="0" Grid.Column="2" Grid.RowSpan="2"
-                                            Padding="0" 
-                                            CornerRadius="100">
-                                        <Image Source="{Binding Speaker.Picture}"
-                                               HorizontalOptions="FillAndExpand"
-                                               VerticalOptions="FillAndExpand"
-                                               Aspect="AspectFill"/>
-                                    </Frame> 
 
-                                </Grid>
-                            </Frame>
+                                        <StackLayout Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2"
+                                                     VerticalOptions="Center">
+                                            <Label
+                                                Text="{Binding Title}"
+                                                FontAttributes="Bold"
+                                                TextColor="#333" />
+                                            <!-- TODO: Make this red if full -->
+                                            <Label FontSize="Micro"
+                                                   FontAttributes="Italic"
+                                                   TextColor="#333">
+                                                <Label.Text>
+                                                    <MultiBinding StringFormat="{}{0}/{1}">
+                                                        <Binding Path="ParticipantsNumber" />
+                                                        <Binding Path="MaxParticipants" />
+                                                    </MultiBinding>
+                                                </Label.Text>
+                                            </Label>
+                                        </StackLayout>
+
+
+                                        <Frame Grid.Row="0" Grid.Column="2" Grid.RowSpan="2"
+                                               Padding="0"
+                                               CornerRadius="100">
+                                            <Image Source="{Binding Speaker.Picture}"
+                                                   HorizontalOptions="FillAndExpand"
+                                                   VerticalOptions="FillAndExpand"
+                                                   Aspect="AspectFill" />
+                                        </Frame>
+
+                                    </Grid>
+                                </Frame>
                             </StackLayout>
-                            
-                        </ViewCell>  
-                    </DataTemplate>  
-                </ListView.ItemTemplate>  
+
+                        </ViewCell>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
             </ListView>
         </StackLayout>
     </ContentPage.Content>
