--- a/Bitad2021/Bitad2021/Views/AgendasPage.xaml
+++ b/Bitad2021/Bitad2021/Views/AgendasPage.xaml
@@ -11,8 +11,8 @@
                              androidSpecific:TabbedPage.ToolbarPlacement="Bottom">
 
     <views:LecturesPage Title="Wykłady" BindingContext="{Binding LecturesViewModel}"
-                        IconImageSource="agenda_icon.png" />
+                        IconImageSource="lecture_icon.png" />
     <views:WorkshopsPage Title="Warsztaty" BindingContext="{Binding WorkshopsViewModel}"
-                         IconImageSource="agenda_icon.png" />
+                         IconImageSource="workshop_icon.png" />
 
 </xamForms:ReactiveTabbedPage>
