--- a/Bitad2021/Bitad2021/Views/LecturesPage.xaml
+++ b/Bitad2021/Bitad2021/Views/LecturesPage.xaml
@@ -50,7 +50,9 @@
                                                FontAttributes="Bold"
                                                TextColor="#333"
                                                VerticalOptions="Center"
-                                               Margin="0,0,0,-10" />
+                                               Margin="0,0,0,-10"
+                                               MaxLines="3"
+                                               LineBreakMode="TailTruncation"/>
 
                                         <Frame Grid.Row="0" Grid.Column="2" Grid.RowSpan="2"
                                                Padding="0"
